--- a/LaTeX/Rapport/Introduction.tex
+++ b/LaTeX/Rapport/Introduction.tex
@@ -5,7 +5,9 @@
 \subsection{Collisions}
 Au cours, de ce stage, je me concentrerais sur les collisions de type \texttt{nnh} pour neutrino-neutrino-higgs
 
-\section{SDCAL}
+\section{SDHCAL (Semi-Digital Hadronic CALorimeter)}
+
+tests en Septembre
 
 \section{iLCSoft}
 
