--- a/LaTeX/Rapport/notes.tex
+++ b/LaTeX/Rapport/notes.tex
@@ -13,7 +13,7 @@
 \usepackage{hyperref}
 \usepackage{xspace}
 
-\author{Alexia HOCINE}
+\author[Hocine]{Alexia HOCINE}
 \title{Stage M2 Physique, parcours SUBA\\Université de Claude Bernard Lyon 1}
 \date{2021-2022}
 
