--- a/LaTeX/Bibliographies/biblio.bib
+++ b/LaTeX/Bibliographies/biblio.bib
@@ -1,3 +1,8 @@
+%keyword={sdhcal}
+%keyword={ilcsoft}
+%keyword={fcc}
+%keyword={particles}
+
 @article{Gaede:2003ip,
     author = "Gaede, Frank and Behnke, Ties and Graf, Norman and Johnson, Tony",
     title = "{LCIO: A Persistency framework for linear collider simulation studies}",
