--- a/LaTeX/Rapport/Preambule.tex
+++ b/LaTeX/Rapport/Preambule.tex
@@ -10,7 +10,7 @@
 
 \subparagraph{La documentation et le packet \texttt{git} du format de données \texttt{LCIO} et de la librairie \texttt{Marlin}}
 \begin{itemize}
-	\item \url{https://github.com/iLCSoft/LCIO}
+	\item \url{https://github.com/iLCSoft/LCIO} \cite{Gaede:2003ip}
 	\item \url{https://github.com/iLCSoft/Marlin}
 \end{itemize}
 
@@ -25,3 +25,4 @@
 			\url{https://github.com/key4hep/k4MarlinWrapper}
 			
 \end{itemize}  
+ \cite{einstein}
