--- a/LaTeX/Rapport/iLCSoft.tex
+++ b/LaTeX/Rapport/iLCSoft.tex
@@ -8,7 +8,7 @@
 Initialement, on m'a mis à disposition des fichiers \SLCIO rangés par processus dans 66 dossiers (Figure~\ref{listeProcessus}).
 
 \begin{figure}[h!]
-	\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
+	%\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
 	\caption{Les noms des dossiers qui correspondent aux numéros de processus}
 	\label{listeProcessus}
 	
