--- a/LaTeX/Rapport/Preambule.tex
+++ b/LaTeX/Rapport/Preambule.tex
@@ -1,5 +1,18 @@
 \chapter*{Préambule}
 
+\section*{Remerciements}
+
+Gérald Grenier
+
+financement : CNRS
+
+laboratoire d'accueil : IP2I 
+
+équipe : Imad Laktineh
+
+
+\section*{Résumer du travail effectué}
+
 \paragraph{Email Gérald Grenier :}
 
 \subparagraph{Un tutorial de \texttt{ilcsoft} :} 
@@ -25,4 +38,5 @@
 			\url{https://github.com/key4hep/k4MarlinWrapper}
 			
 \end{itemize}  
- \cite{einstein}
+
+\section*{Geek and Japan Touch}
