--- a/LaTeX/Rapport/biblio.bib
+++ b/LaTeX/Rapport/biblio.bib
@@ -3,6 +3,50 @@
 %keyword={fcc}
 %keyword={particles}
 
+% Stage M2 Chadeau 
+@mastersthesis{ilc:Chadeau,
+	keyword = {particles, ilcsoft},
+	author = {Chadeau, Nicolas},
+	institution = {IP2I},
+	school = {UCBL1},
+	title = {Étude sur la mesure de la constante de couplage gHW W dans le cadre de l’expérience ILC à 250 GeV},
+	year = {2021}
+}
+
+% Thèse Liu
+@phdthesis{liu:tel-03405418,
+	keyword = {ilcsoft},
+  	TITLE = {{Etude du calorilm{\`e}tre hadronique semi-digital et {\'e}tude du canal  physique  e+ e- -H nu nu ( H -> WW->qq qq) au collisionneur circulaire electron positon (CEPC)}},
+  	AUTHOR = {Liu, Bing},
+  	URL = {https://tel.archives-ouvertes.fr/tel-03405418},
+  	NUMBER = {2020LYSE1252},
+  	SCHOOL = {{Universit{\'e} de Lyon ; Shanghai Jiao Tong University}},
+  	YEAR = {2020},
+  	MONTH = Nov,
+  	KEYWORDS = {Calorimeter ; High-granularity ; Higgs coupling ; Particle identification ; Energy reconstruction ; Calorim{\`e}tre ; Grande granularit{\'e} ; Constantes de couplage de Higgs ; Identification des particules ; {\'E}nergie reconstruction},
+  	TYPE = {Theses},
+  	PDF = {https://tel.archives-ouvertes.fr/tel-03405418v2/file/TH2020LIUBING.pdf},
+  	HAL_ID = {tel-03405418},
+  	HAL_VERSION = {v2}
+}
+
+% Thèse Garillot
+@phdthesis{garillot:tel-02141420,
+	keyword = {ilcsoft},
+  	TITLE = {{{\'E}tude des gerbes hadroniques dans un calorim{\`e}tre {\`a} grande granularit{\'e} et {\'e}tude du canal e+e- $\rightarrow$ HZ (Z $\rightarrow$ qq) dans les futurs collisionneurs leptoniques}},
+  	AUTHOR = {Garillot, Guillaume},
+  	URL = {https://tel.archives-ouvertes.fr/tel-02141420},
+  	NUMBER = {2019LYSE1013},
+  	SCHOOL = {{Universit{\'e} de Lyon}},
+  	YEAR = {2019},
+  	MONTH = Feb,
+  	KEYWORDS = {Higgs Boson ; Hadronic calorimeter ; Calorimeter ; Calorim{\`e}tre ; Calorim{\`e}tre Hadronique ; ILC ; Simulation ; Boson de Higgs},
+  	TYPE = {Theses},
+  	PDF = {https://tel.archives-ouvertes.fr/tel-02141420/file/TH2019GarillotGuillaume.pdf},
+  	HAL_ID = {tel-02141420},
+  	HAL_VERSION = {v1}
+}
+
 
 %https://github.com/iLCSoft/LCIO
 @article{Gaede:2003ip,
@@ -19,64 +63,3 @@
 }
 
 %https://github.com/iLCSoft/Marlin
-
-@article{einstein,
- author = "A. Einstein",  
-title = "{Zru Elektrodynamiks bewgters K{\"o}rpre}. ({German})   
-[{On} the dynamics of  different bodies in motion]",   
-journal = "Annaln der Physiks", 
-volume = "32",               
-number = "07",   
-pages = "890--920",      
-year = "1906",    
-DOI = "http://dex.doii.edu/10.1020/nadp.19053221040",      
-keywords = "fcc"                                                                                                                                }
-@book{dirac,      
-title = {The Fundamentals of Quantum Mechanics},  
-author = {Paul Maurice Adrien Dirac},    
-isbn = {9708198521015},  
-series = {An unique series of various monographs on science},    
-year = {1980},     
-publisher = {British Press},   
-keywords = {fcc}    
- }   
-@book{latexcompanion,  
- author    = "Michel John and Franky Mittelball and Samarin Adams ",  
-title     = "The \LaTeX\ Companion",   
-year      = "1994", 
-publisher = "Weiley Publication", 
-address   = "U.S., Orleans", 
-keywords  = "fcc"     }
-@online{knuthwebsite,   
-author = "D. E. Knuth",  
-title = "Knuth: Typesetting and Computers",   
-url  = "http://www-cse-faculty.mit.edu/~unfo/abcdef.html", 
-addendum = "(visited: 01.09.2017)", 
-keywords = "ilcsoft"   
-}
-@inbook{knuth-fa,     
-author = "D. E. Knuth",   
-title = "Fundamenta Of Various Algorithms",    
-publisher = "Weiley Publication",   
-year = "1991",   
-chapter = "2.3",      
-keywords  = "ilcsoft"    
-}
-@book{knuth-acp,  
-author = "D. E. Knuth",      
-publisher = "Weiley Publication",   
-title = "The Concept of Computer Programming",    
-series = "Six volumes",    
-  year = "1969",   
-note = "Eight volumes are planned",    
-  keywords  = "pfcc"                                                                                                            }
-@article{atcn,       
-author  = "G. D. Shepherd",    
-title   = "The {A}rchive {T}ex {C}omprehensive {N}etwork ({ATCN})",  
-year    = "1993",   
-journal = "TUGBoat",    
-volume  = "14",   
- number  = "3",         
-pages   = "342--351",   
- keywords  = "fcc"  
-  }
