--- a/LaTeX/Rapport/Introduction.tex
+++ b/LaTeX/Rapport/Introduction.tex
@@ -1,17 +1,41 @@
 \chapter{Introduction}
 
-\section{Objectifs physiques}
+\section{Physique des collisionneurs}
+
+\subsection{Collisionneurs hadroniques}
+
+Collisionneurs pour la découverte
+
+\subsection{Collisionneurs leptoniques}
+
+Collisionneurs de précision
+
+Les prochaines générations de collisionneurs leptoniques sont ILC, CEPC, CLIC et FCC. 
+L'objectif étant une meilleurs résolutions de l'énergie des jets \cite{liu:tel-03405418}.
+
+Pour cela, on utilise ici des calorimètres à grande granularité qui permet une très bonne performance des Algorithmes de Flux de Particules (PFA) \cite{liu:tel-03405418}.
+
+
+\section{SDHCAL (Semi-Digital Hadronic CALorimeter)}
+
+Dans le cadre de la collaboration internationale CALICE, le premier prototype de la famille de calorimètres granulaires SDHCAL a été développer au grande partie à l'IP2I.
+
+tests en Septembre
 
 \subsection{Collisions}
 Au cours, de ce stage, je me concentrerais sur les collisions de type \texttt{nnh} pour neutrino-neutrino-higgs
 
-\section{SDHCAL (Semi-Digital Hadronic CALorimeter)}
+%\section{iLCSoft}
 
-tests en Septembre
-
-\section{iLCSoft}
-
-\section{FCC}
+%\section{FCC}
 
 \section{Présentation \& Objectif du Stage}
 
+analyse des canaux :
+\begin{equation}
+	e^{+} e^{-} \longrightarrow \nu \nu h \left(h \longrightarrow WW \longrightarrow qqqq \right)
+\end{equation}
+
+\begin{equation}
+	e^{+} e^{-} \longrightarrow \nu \nu h \left(h \longrightarrow b \bbar \right)
+\end{equation}
