--- a/LaTeX/Rapport/main.tex
+++ b/LaTeX/Rapport/main.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage{lmodern}
 \usepackage{hyperref}
+\usepackage{url}
 \usepackage{xspace}
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
