rapport add FCC VS ILC

--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -90,6 +90,27 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Projets iLC et FCC}
+
+	\begin{columns}
+		
+		\begin{column}{0.45\textwidth}
+			\begin{block}{ILC}
+
+			\end{block}
+		\end{column}
+		
+		\begin{column}{0.45\textwidth}
+			\begin{block}{FCC}
+
+			\end{block}
+		\end{column}
+	\end{columns}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}{Sommaire}
 	\tableofcontents
 \end{frame}
