--- a/LaTeX/Rapport/Introduction.tex
+++ b/LaTeX/Rapport/Introduction.tex
@@ -2,21 +2,54 @@
 
 \section{Physique des collisionneurs}
 
+Le principe des collisionneurs est simple, on accélère des particules à des 
+énergies cinétiques suffisantes pour provoquer des collisions inélastiques.
+
+Il en existe de 2 types que l'on distingue par le type de particules que l'on 
+utilise.
+
 \subsection{Collisionneurs hadroniques}
 
-Collisionneurs pour la découverte
+Dans les collisionneurs hadroniques on utilise des hadrons, qui sont des 
+particules complexes composées de 3 quarks et de gluons (bosons médiateurs 
+de l'interaction forte qui maintiennent les quarks ensembles). 
+En pratique au LHC (Large Hadron Collider) du CERN, on utilise des protons, 
+2 quarks up et un quark down. 
+
+Comme il s'agit de particules composites, ce sont pas le protons qui colisionnent 
+directement mais ces contituants, appelés partons. Chacuns porte une fraction de 
+l'énergie du proton. 
+Ce qui permet d'avoir des énergies de collisions indéterminées en amont.
+C'est pourquoi, ils sont utiles pour la découverte de nouvelles particules de 
+masse inconnue, puisqu'il permettent de balayer tout le spectre de masse d'une 
+gamme d'énergie.
 
 \subsection{Collisionneurs leptoniques}
 
-Collisionneurs de précision
+En revanche, les collisionneurs leptoniques collisionnent des leptons, qui sont
+des particules élémentaires. Donc on connait parfaitement leur énergie et on les 
+utilise pour faire de la recherche à un niveau d'énergie choisi.  
+Ce sont des collisionneurs de précision.\\
 
-Les prochaines générations de collisionneurs leptoniques sont ILC, CEPC, CLIC et FCC. 
-L'objectif étant une meilleurs résolutions de l'énergie des jets \cite{liu:tel-03405418}.
+Les prochaines générations de collisionneurs, ILC, CEPC, CLIC et FCC, sont des 
+collisionneurs leptoniques. Leur objectif est de préciser les données du LHC, 
+notamment sur le boson de Higgs découvert en 2012 par le LHC, qui était la pièce 
+manquante du modèle standard des particules, car il permet aux particules 
+d'acquérir une masse.
 
-Pour cela, on utilise ici des calorimètres à grande granularité qui permet une très bonne performance des Algorithmes de Flux de Particules (PFA) \cite{liu:tel-03405418}.
+\section{Physique du boson de Higgs}
+
+\subsection{Production du boson de Higgs}
+
+Concrètement, on ne mesure pas directement le boson de Higgs mais les particules 
+qu'ils produitent sous la forme de jets.
+Ainsi on veut améliorer la résolutions en énergie des jets que l'on détecte \cite{liu:tel-03405418}.
 
 
 \section{SDHCAL (Semi-Digital Hadronic CALorimeter)}
+
+Pour cela, on utilise ici des calorimètres à grande granularité qui permet une 
+très bonne performance des Algorithmes de Flux de Particules (PFA) \cite{liu:tel-03405418}.
 
 Dans le cadre de la collaboration internationale CALICE, le premier prototype de la famille de calorimètres granulaires SDHCAL a été développer au grande partie à l'IP2I.
 
