--- a/LaTeX/Rapport/biblio.bib
+++ b/LaTeX/Rapport/biblio.bib
@@ -63,3 +63,20 @@
 }
 
 %https://github.com/iLCSoft/Marlin
+
+@misc{cern:fcc,
+    author={CERN},
+    title={Le Futur collisionneur circulaire},
+    month={jun},
+    year={2022},
+    note={https://home.cern/fr/science/accelerators/future-circular-collider}
+}
+
+@misc{cern:lhc,
+    author={CERN},
+    title={Grand collisionneur de hadrons},
+    month={juin},
+    year={2022},
+    note={https://home.cern/fr/science/accelerators/large-hadron-collider}
+}
+
