--- a/LaTeX/Rapport/iLCSoft.tex
+++ b/LaTeX/Rapport/iLCSoft.tex
@@ -1,4 +1,9 @@
-\chapter{\texttt{ilcsoft}}
+\chapter{\texttt{ILC}}
+
+\section{Présentation}
+
+Le projet ILC (International Linear Collider) est un collisionneur linéaire de 20 km
+conçu pour atteindre une énergie de centre de masse de 500 GeV. 
 
 \section{Projet \nnhAnalysis}
 
